RESOLVED FIXED75520
HTMLConstructionSite::attach shouldn't return a value
https://bugs.webkit.org/show_bug.cgi?id=75520
Summary HTMLConstructionSite::attach shouldn't return a value
Adam Barth
Reported 2012-01-03 21:28:08 PST
HTMLConstructionSite::attach shouldn't return a value
Attachments
Patch (11.83 KB, patch)
2012-01-03 21:30 PST, Adam Barth
no flags
Adam Barth
Comment 1 2012-01-03 21:30:24 PST
Eric Seidel (no email)
Comment 2 2012-01-03 22:16:23 PST
Comment on attachment 121056 [details] Patch LGTM.
WebKit Review Bot
Comment 3 2012-01-03 23:05:51 PST
Comment on attachment 121056 [details] Patch Clearing flags on attachment: 121056 Committed r104015: <http://trac.webkit.org/changeset/104015>
WebKit Review Bot
Comment 4 2012-01-03 23:05:55 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.